--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,3 @@
-body {
-  font-size: 16px;
-  font-family: Verdana, sans-serif;
+[v-clock] {
+  display: none
 }
-
-.container {
-  width: 300px;
-  margin: auto;
-}
-
-#app h1 {
-  font-size: 16px;
-  border-bottom: 1px solid #ddd;
-  padding: 16px opx;
-}
-
-#app li {
-  line-height: 1.5;
-}
-
-#app input[type="text"] {
-  padding: 2px;
-}
-
